Update UI layout in PrefabItem and ManageModels

--- a/Editor/Resources/UI/TabContents/ImportSettings/Contents/ManageModels.uxml
+++ b/Editor/Resources/UI/TabContents/ImportSettings/Contents/ManageModels.uxml
@@ -1,15 +1,21 @@
-<ui:UXML 
-    xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xmlns:eau="EAUploader.UI.Components" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:Label tabindex="-1" text="Manage Model" parse-escape-sequences="true" display-tooltip-when-elided="true" enable-rich-text="true" class="text-xl font-bold pb-2" />
-    <ui:VisualElement name="VisualElement" class="flex flex-row items-center pb-4">
+<ui:UXML
+    xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements"
+    xmlns:eau="EAUploader.UI.Components" xsi="http://www.w3.org/2001/XMLSchema-instance"
+    engine="UnityEngine.UIElements" editor="UnityEditor.UIElements"
+    noNamespaceSchemaLocation="../../../../../UIElementsSchema/UIElements.xsd"
+    editor-extension-mode="False">
+    <ui:Label tabindex="-1" text="Manage Model" parse-escape-sequences="true"
+        display-tooltip-when-elided="true" enable-rich-text="true" class="text-xl font-bold pb-2" />
+    <ui:VisualElement name="VisualElement" class="flex flex-row items-center pb-2" >
         <ui:VisualElement name="SearchContainer" class="flex flex-row items-center flex-1 pr-2">
             <ui:TextField name="searchQuery" picking-mode="Ignore" class="flex-1 mr-2" />
-                <eau:ShadowButton name="searchButton" text="Search" parse-escape-sequences="true" display-tooltip-when-elided="true" class="search-button" />
-            </ui:VisualElement>
-            <ui:VisualElement name="SortContainer" class="flex flex-row items-center flex-1 pl-2">
-            <ui:VisualElement name="sortbar" class="flex-1"/>
+            <eau:ShadowButton name="searchButton" text="Search" parse-escape-sequences="true"
+                display-tooltip-when-elided="true" class="search-button" />
         </ui:VisualElement>
-        <ui:VisualElement name="filterbar" class="flex-1"/>
+    </ui:VisualElement>
+    <ui:VisualElement class="flex-row pb-2">
+        <ui:VisualElement name="sortbar" class="pr-2"/>
+        <ui:VisualElement name="filterbar" class="pl-2"/>
     </ui:VisualElement>
     <ui:ScrollView name="model_list" class="flex-1" />
 </ui:UXML>
