Add Exit Unity Button

--- a/Editor/Resources/UI/TabContents/ImportSettings/Contents/Import.uxml
+++ b/Editor/Resources/UI/TabContents/ImportSettings/Contents/Import.uxml
@@ -66,5 +66,7 @@
             display-tooltip-when-elided="true" />
         <eau:ShadowButton name="send_feedback" text="Send feedback" parse-escape-sequences="true"
             display-tooltip-when-elided="true" />
+        <eau:ShadowButton name="exit_unity" text="Exit Unity" parse-escape-sequences="true"
+            display-tooltip-when-elided="true" class="p-4"/>
     </ui:VisualElement>
 </ui:UXML>
