--- a/Editor/Resources/UI/TabContents/Upload/Contents/UploadForm.uxml
+++ b/Editor/Resources/UI/TabContents/Upload/Contents/UploadForm.uxml
@@ -46,7 +46,10 @@
                     </ui:VisualElement>
                 </ui:ScrollView>
                 <ui:VisualElement class="w-one-half ml-2">
-                    <ui:Label text = "Set thumbnail" class="text-xl font-bold pb-2" name="addThumbnailLabel" />
+                    <ui:VisualElement class="flex-row pb-2">
+                        <ui:Label text = "Set thumbnail" class="text-xl font-bold" name="addThumbnailLabel" />
+                        <eau:HelpButton msg-id="115" class="pl-4 self-center"/>
+                    </ui:VisualElement>
                     <ui:VisualElement name="avatar_thumbnail" class="pb-2">
                         <ui:VisualElement name="thumbnail" class="flex-row h-64 pb-4 self-center">
                             <ui:Image name="thumbnail-image"/>
