--- a/Editor/Resources/UI/TabContents/ImportSettings/Contents/EALibrary/EALibrary.uss
+++ b/Editor/Resources/UI/TabContents/ImportSettings/Contents/EALibrary/EALibrary.uss
@@ -5,7 +5,7 @@
 .unity-list-view__item {
 	border-bottom-width: 1px;
 	border-color: var(--default);
-	background-color: white;
+	background-color: var(--background);
 	color: black;
 	overflow: hidden;
 	transition: 150ms;
