--- a/Editor/Resources/UI/Components/ArticleRenderer.uss
+++ b/Editor/Resources/UI/Components/ArticleRenderer.uss
@@ -1,7 +1,7 @@
 #header-text {
 	font-size: 24px;
 	-unity-font-style: bold; 
-	color: #000;
+	color: black;
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
