--- a/Editor/Resources/UI/styles.uss
+++ b/Editor/Resources/UI/styles.uss
@@ -1024,3 +1024,13 @@ RadioButton * {
 .dark .selected.pinned {
 	background-color: var(--secondary);
 }
+
+/* Drop Model Styles */
+.drop-model {
+	position: absolute;
+	background-color: rgba(255, 255, 255, 0.5);
+	height: 100%;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
+}
