--- a/Editor/Resources/UI/Windows/Logger.uxml
+++ b/Editor/Resources/UI/Windows/Logger.uxml
@@ -16,7 +16,7 @@
             <ui:VisualElement class="flex-1">
                 <ui:Label text="An error has occurred" class="text-xl font-bold pb-2" />
                 <ui:Label
-                    text="Copy this error message and send it to the developer. If close this window, the error message will be lost."
+                    text="An error has occurred. Please try to resolve the issue based on this error or seek help from the community or other sources. However, if the error is caused by EAUploader, please report it to the developer via feedback."
                     class="text-sm pb-4" />
                 <ui:VisualElement class="flex-row flex-1 pb-4">
                     <ui:ScrollView class="flex-1 border border-gray-400 rounded-md">
